miniextendr-macros/tests/ui/impl_method_self_by_value.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> tests/ui/impl_method_self_by_value.rs:8:6
  |
7 |   #[miniextendr]
  |   -------------- argument #1 of type `Counter` is missing
8 |   impl Counter {
  |  ______^
9 | |     fn consume(self) -> i32 {
  | |______________^
  |
note: method defined here
 --> tests/ui/impl_method_self_by_value.rs:9:8
  |
9 |     fn consume(self) -> i32 {
  |        ^^^^^^^ ----
help: provide the argument
  |
9 |     fn consume(/* Counter */)(self) -> i32 {
  |               +++++++++++++++
